//
//  IntellectProtocol.swift
//  CityBoom
//
//  Created by Константин Колодий on 18/11/2018.
//  Copyright © 2018 Константин Колодий. All rights reserved.
//

import Foundation

protocol IntellectProtocol {
    func play(_ chain: Chain) -> City?
}
